Restore getDefaultIpAddressSet() order
The order of returned elements is significant, use ImmutableSet to
retain it.

Change-Id: I55e7551b19b2973b68be2486586efd5ea7012716
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 5b150599c7fd7b5d9fb18158e5f22fd9bcabab69)
(cherry picked from commit 0ce9d4b0a8fc4729e5055f8fbd2e0171a72184ab)