@@ -9,6 +9,7 @@ package org.opendaylight.lispflowmapping.implementation.lisp;
 
 import static org.junit.Assert.assertEquals;
 
+import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashSet;
@@ -407,8 +408,8 @@ public class MapServerTest {
         return mapNotifyBuilder;
     }
 
-    private static Set<IpAddressBinary> getDefaultIpAddressSet() {
-        return Set.of(IPV4_BINARY_1, IPV4_BINARY_2);
+    private static ImmutableSet<IpAddressBinary> getDefaultIpAddressSet() {
+        return ImmutableSet.of(IPV4_BINARY_1, IPV4_BINARY_2);
     }
 
     private static List<TransportAddress> getTransportAddressList() {
